# modnote-snoonote-importer

./: .editorconfig  .git_allowed_signers  .gitignore  .pylintrc  README.md  config.example.yaml  logging.json  pyproject.toml
modnote_snoonote_importer/: __main__.py  logger.py  main.py  parser.py
tests/: conftest.py  snoonotes.json  test_parser.py
